Edited wiki page OpenEVSE_Plus_spec through web user interface.

--- a/wiki/OpenEVSE_Plus_spec.wiki
+++ b/wiki/OpenEVSE_Plus_spec.wiki
@@ -4,111 +4,4 @@
 = OpenEVSE Plus - Quick Kit =
 
 
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_7674_1024x1024.jpg?187
-
-
-Specifications:
-
-  * Both Hardware and Firmware Open Source
-  * Fully supports SAE J1772 Recommended Practice
-  * Software adjustable pilot (6A – 80A)
-  * 4W Switch Mode Power Supply Integrated
-  * Built in GFCI with 20ma trip point
-  * Supports all J1772 states including “ventilation required”
-  * Supports Diode check
-  * AC L1 – L2 auto detect Current setting for each
-  * Ground verification and Stuck Relay detection
-  * All surface mount component work complete
-  * Firmware pre-loaded
-  * Board and Schematic Files Available
-  * Tiny 2.2 x 1.75 x 1
-
-=Kit Contents=
-The <b><font color=teal> Open</font></b>*EVSE* Quick kit is designed for quick assembly. All the hard work is done for you. All that is left is soldering a few large parts and Header pins.
-
-  * <b><font color=teal> Open</font></b>*EVSE* Plus logic Board
-  * 4W Universal Switch-mode Power supply MPM-04D-1205E
-  * DC/DC Converter (-12V and +12V Output) MPM D117E
-  * 2 x 47k Ohm 1 watt flame proof resistor
-  * 2 x Bel 1A fuses
-
-
-
-*<b><font color=teal> Open</font></b>*EVSE* Plus v2 Board connections*
-
-http://farm9.staticflickr.com/8212/8421959660_9e22cc662f_z.jpg
-
-=Building the Kit=
-
-<script type="text/javascript"
-          data-dozuki-embed='3'
-          src="http://d1luk0418egahw.cloudfront.net/static/embed/ifixit-embed.3.js#id=2&site=openevse.dozuki.com">
-           </script><p><a href="http://openevse.dozuki.com/Guide/How+to+Build+OpenEVSE+Plus+V2/2">
-
-
-How to Build OpenEVSE Plus V2</a></p>
-
-
-
-All through hole parts are placed on the opposite side from the surface mount components, but soldered on the same side as the surface mounts. The board has markings to identify the parts and correct placement.
-
-Take care not to touch existing components with the soldering iron. Position board so soldering can occur without interference with other parts.
-
-http://farm9.staticflickr.com/8192/8421733534_a6e8487ee7_n.jpg
-
-Start with the smallest components and work up to the larger ones so that when you flip the board over the parts will not fall out.
-
-First solder the 2 Flame proof resistors (47k for 120v/240v split-phase American and 230v European systems)
-
-Next solder the 2 Bel fuses.
-
-http://farm9.staticflickr.com/8079/8420634851_5b998f27ae_n.jpg
-
-Next solder the DC/DC converter and the .1" pin headers.
-
-Solder the large 2 pin Screw Terminal.
-
-http://farm9.staticflickr.com/8231/8420632091_366b2ccd4f_n.jpg
-
-Finally solder the Power Supply.
-
-http://farm9.staticflickr.com/8333/8421725538_1f0b3685fa_n.jpg
-
-
-
-Follow the Test procedure here: http://code.google.com/p/open-evse/wiki/EVSE_TESTING
-
-=Bill of Materials=
-For those who would like to build or modify their own SMT version here is the BOM.
-|| Part || Manufacture || Part Number || Digikey ||
-|| IC2 || Atmel || ATMEGA328P-AU || ATMEGA328P-AU-ND ||
-|| IC4 || Texas Instruments || LF353DR || 296-14587-1-ND ||
-|| IC3 || Fairchild Semi || LM358MX || LM358MXFSCT-ND ||
-|| Q1 || CTS-Frequency Controls || 403C35D16M00000 || CTX840CT-ND ||
-|| TVS || Littelfuse Inc. || P6SMB16CA || P6SMB16CALFCT-ND ||
-|| D1 || Diodes Inc. || AZ23C5V6-7-F ||	AZ23C5V6-FDICT-ND ||
-|| D2, D3,D4, D5 || Diodes Inc. || 1N4148W-7-F || 1N4148W-FDICT-ND ||
-|| Q2,Q3 || Diodes Inc. || MMBT2222A-7-F || MMBT2222A-FDICT-ND ||
-|| C4, C14 || AVX Corporation || TPSA106M010R1800 || 478-4086-1-ND ||
-|| C3 C7, C9, C10 ,C12 || AVX Corporation || 08055C104KAT2A || 478-1395-1-ND ||
-|| C13 || TDK Corporation || C2012X5R1E225K/1.25 || 445-7629-1-ND ||
-|| C5,C6 || AVX Corporation || 08053G105ZAT2A || 478-1426-1-ND ||
-|| C1,C2 || AVX Corporation || 08055A220JAT2A || 478-1308-1-ND ||
-|| R18 || Panasonic - ECG || ERJ-P06J101V || P100ADCT-ND ||
-|| R11, R17, R23, R24 || Panasonic - ECG || ERJ-6GEYJ331V || P330ACT-ND ||
-|| R1 || Panasonic - ECG || ERJ-6GEYJ621V || P620ACT-ND ||
-|| R20 || Panasonic - ECG || ERJ-6GEYJ102V || P1.0KACT-ND ||
-|| R12,R13 || Panasonic - ECG || ERJ-6GEYJ242V || P2.4KACT-ND ||
-|| R10, R19 || Panasonic - ECG || ERJ-6GEYJ103V	|| P10KACT-ND ||
-|| R15 || Panasonic - ECG || ERJ-6GEYJ203V || P20KACT-ND ||
-|| R5 || Panasonic - ECG || ERJ-6GEYJ563V || P56KACT-ND ||
-|| R6, R8, R9, R14, R16 || Panasonic - ECG || ERJ-6GEYJ104V || P100KACT-ND ||
-|| R7 || Panasonic - ECG || ERJ-6GEYJ204V || P200KACT-ND ||
-|| IC1, IC5 || Farchild Simi ||	MID400 || MID400-ND ||
-|| PILOT || TE Connectivity || 1776244-2 || A97996-ND ||
-|| AC_LINE, AC_TEST ||	TE Connectivity || 1776275-2 ||	A98036-ND ||
-|| RELAY || TE Connectivity ||	1776275-3 ||	A98037-ND ||
-|| R21, R22 ||	Panasonic - ECG	|| ERG-1SJ223 || P47KW-1BK-ND ||
-|| F1, F2 ||	Bel ||	RST 1 ||	507-1176-ND ||
-
-This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
+New Guide located at http://guides.openevse.com
