Edited wiki page OpenEVSE_LCD_spec through web user interface.

--- a/wiki/OpenEVSE_LCD_spec.wiki
+++ b/wiki/OpenEVSE_LCD_spec.wiki
@@ -1,99 +1,5 @@
 #summary Spec for OpenEVSE RGB LCD and RGB LCD with RTC.
 
 =OpenEVSE LCD - Quick Kit=
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_7679_1024x1024.jpg?187
 
-<b><font color=teal> Open</font></b>*EVSE* i2c LCD Boards are now available designed specifically for <b><font color=teal> Open</font></b>*EVSE* Charging Stations. They are very compact and easy to interface. The <b><font color=teal> Open</font></b>*EVSE* LCD boards support RGB LCDs and are available with or without a RTC(Real Time Clock)to add EVSE Based timer based functionality. Vehicle based timers work with or without RTC.
-
-The <b><font color=teal> Open</font></b>*EVSE* RGB LCD uses the [https://github.com/lincomatic/LiquidTWI2 LiquidTWI2] library written by OpenEVSE firmware guru Lincomatic. 
-
-The optional RTC utilizes the DS3231 ultra-precice temperature compensated RTC. A CR1220 or CR1225 lithium battery is required but not included due to shipping restrictions.
-
-=Reference=
-
-== Schematic, Board files, Gerber files =
-It is a good idea to have the schematic close by for reference.
-The schematic is located here:
-
-https://open-evse.googlecode.com/files/RGB_i2c_v1plusRTC.zip
-
-
-
-== BOM ==
-||Part||	Quantity||	Manufacture||	Part Number||
-||Logic Board||1||	GoldPheonix||	Board||
-||RGB LCD display || 1 || || ||
-||4 pin cable || 1 || Pololu || ||
-||Nylon Spacer || 4|| || ||
-||.1" Header pins || 18 || || ||
-||.1" Right angle pins ||7|| || ||
-
-
-
-== Soldering ==
-
-[http://mightyohm.com/files/soldercomic/FullSolderComic_EN.pdf http://mightyohm.com/blog/wp-content/uploads/2011/04/FullSolderComic_EN_Page_1_resized.png]
-
-
-Note - A CR1220 or CR1225 lithium coin cell is required for boards with the RTC Option
-
-
-= Assembly =
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9082_1024x1024.jpg 
- 
-  * Solder the .1" 4-pin header to the i2c connector (If your board has two use the connector on the left).
-  * Optional - Solder a 3 pin header on the S - Row for use with a button switch.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9083_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9083_medium.jpg]
-
-  * Flip the board over and trim the excess leads
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9084_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9084_medium.jpg]
-
-  * Solder the 18-pin (for RGB LED) or 16-pin (for Mono LCD) header to logic board Pins extending down.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9085_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9085_medium.jpg]
-
-  * With logic board upside down Place the 4 plastic spacers at each corner to ensure proper spacing.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9086_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9086_medium.jpg]
-
-  * Solder the pins the the LCD Module.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9087_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9087_medium.jpg]
-
-  * Trim excess length from header pins
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9088_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9088_medium.jpg]
-
-
-
-  * Power up your board connected to an OpenEVSE J1772 Controller.
-  * <b><font color=red>Important </font></b>  - Adjust the contrast Labeled *VR-1* with a small screw driver until the lettering is bright but the background is still dark.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9090_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9090_medium.jpg]
-
-  
-
-=Push Button - Optional=
-If using the Water resistant push button and 3-pin connector from the OpenEVSE store...
-
-  * Place heat shrink tube over each wire 
-  * Solder the Red wire on the connector(5v DC) to the terminal lableled "+" on the pushbutton 
-
-  * Solder the black wire (GND) to the terminal labeled "-" AND the terminal labeled "C1"
-
-  * Solder the grey wire to the terminal labeled "NO1".
-  * <b><font color=red>Note </font></b>  - The Terminal labeled "NC1" is not connected and can be trimmed off if desired.
-  * Carefully shrink the wrap over each solder connection
-
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8220_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8226_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8226_medium.jpg]
-
-http://www.adafruit.com/datasheets/metal16mmbuttons.jpg
-
-This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
+New Guide located at http://guides.openevse.com
