Edited wiki page EVSimulator through web user interface.

--- a/wiki/EVSimulator.wiki
+++ b/wiki/EVSimulator.wiki
@@ -2,73 +2,4 @@
 
 =EV Simulator Assembly and Operation=
 
-=Reference=
-== Schematic, Board files, Gerber files =
-It is a good idea to print the schematic for referance.
-
-http://farm8.staticflickr.com/7060/6936255065_b6754ae80f_z.jpg
-
-
-
-== BOM ==
-||Part||Value||	Type||	Quantity||	Manufacture||	Part Number||
-||Board||	||	Board||	1||	GoldPheonix||	Board||
-
-==Resistor Code==
-Here is a handy Resistor chart created by Bret Victor. 
-http://worrydream.com/ResistorDecoder/resistors.png
-Here is a Printable PDF:
-http://worrydream.com/ResistorDecoder/resistors.pdf
-
-== Soldering ==
-
-[http://mightyohm.com/files/soldercomic/FullSolderComic_EN.pdf http://mightyohm.com/blog/wp-content/uploads/2011/04/FullSolderComic_EN_Page_1_resized.png]
-
-
-
-==Kit Contents:==
-  * Simulator Board
-  * 1N4148 diode
-  * 246Ω resistor
-  * 882Ω resistor
-  * 2.740kΩ resistor				        
-  * 2x5 header (male) or two 1x5 pin headers		
-  * 1x2 pin male (2)                      
-
-  http://imageshack.us/a/img580/38/img0465jf.jpg
-
-==Assembly==
-
-1. Install the diode as marked. The line on the diode must be next to the lower hole (as marked on the circuit board). Solder.
-
-2. Install each resistor in its labeled position on the board and solder.
-
-3. Mount the 5x2 pin header with the short pins down, in the two rows of 4 holes under A, B, C, D, F. Solder. 
-  * If you use two 5x1 headers, attach the jumpers on the ends of the rows to hold the two rows of headers in alignment. Solder the middle pins to the board. Remove the jumpers before soldering the pins they are connected to!
-4. Solder a 2x1 pin header to the two Pilot holes.
-5. (Optional) Solder a 2x1 pin header to the two Scope holes.
-  * Alternative methods for connecting to the Pilot and Scope holes:
-    # Solder wires directly to the holes.
-    # Solder wires to the pins. (Put shrink wrap over the wires, solder connection then slip shrink wrap over the exposed metal and heat to shrink)
-
-  http://imageshack.us/a/img716/4893/img0483cd.jpg
-
-==Operation:== 
-Position a jumper across the two pins below each letter to select the test states:
- * A= Not plugged into car.
- * B= Plugged into car but not charging.
- * C= Charging.
- * D= Ventilation request.
- * F= No diode. 2 jumpers: one at the F position; the second at the B or C position.
-
-  =!Caution: when the EVSE is powered there can be dangerous levels of electricity present!=
-
-Power the EVSE with a 120VAC or 240VAC circuit.
-
-Connect the EV Simulator to the Pilot and Ground screw terminals on the OpenEVSE board.
- * Pilot and Scope are the pins next to the edge of the board.
- * Ground is the position next to the 246Ω resistor.
-
-  http://img543.imageshack.us/img543/5714/j1772plug.jpg
-
-This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
+New Guide located at http://guides.openevse.com
