Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -1,229 +1,4 @@
 #summary Build guide for example 30A EVSE
 
 
-=Warning=
-http://www.mysafetysign.com/img/lg/S/High-Voltage-Danger-Sign-S-2250.gif
-
-<b><font color=red>Warning </font></b>Assembly of a Electric Vehicle charging station requires wiring Alternating Current (AC) components that will be exposed to voltages from 100 to 250v. If you do not have the experience and knowledge required to safely work with AC voltages please consult with an experienced electrician for assistance and inspection of your work. 
-
-<b><font color=red>Note </font></b> Regularly inspect your charging station (OpenEVSE or Commercial). Pay special attention to excess heat, components, handles, and wiring will be warm but they should not be HOT...  
-
-<b><font color=red>Important </font></b> Always Disconnect your charging station from power before performing an inspection and/or maintenance. 
- 
-=Parts List=
-
-
-*The following parts are available in the [http://openevse-store.myshopify.com/ OpenEVSE Store] *
-
-<b><font color=red>Time Saver</font></b> - The [http://openevse-store.myshopify.com/collections/frontpage/products/openevse-30a-charge-station-combo 30A Charge Station Combo] avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store] contains the parts to build this 30A Charge Station with the exception of the J1772 cable.
-
-  * [http://openevse-store.myshopify.com/collections/frontpage/products/openevse-plus-v2 OpenEVSE Plus] (Built or Quick Kit)
-  * OpenEVSE LCD (Built or Quick Kit)
-  * Relay 1 x DPST or 2 x SPST
-  * CR 8420-1000-G GFCI coil
-  * 30A Fuse Block
-  * 2 x 30A Fuses
-  * Ground Block
-  * 16mm momentary push button
-  * AC cord
-  * Cable Glands
-  * Enclosure
-
-<b><font color=red>Time Saver</font></b> - Pre-built OpenEVSE Plus boards are avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store].
-
-<b><font color=red>Time Saver</font></b> - Pre-Built OpenEVSE LCDs are avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store].
-
-  
-<b><font color=blue>Optional Parts:</font></b>
-  * EV Simulator
-  * ISP Programmer
-  * Noise/Surge Kit
-
-=References=
-http://farm9.staticflickr.com/8212/8421959660_9e22cc662f_z.jpg
-
-=Internal Mounting Plate=
-In this step we will mount the Main EVSE components to the Internal Mounting plate of the Enclosure.
-
-You will need:
-
-  * OpenEVSE Plus - If you have not Assembled it yet please refer to this [OpenEVSE_Plus_spec Assembly Guide]
-  * Relay(s)
-  * 30A Fuse Block
-  * Ground Block
-  * Internal Mounting plate
-  * 10 - 5/8# 4-40 screws
-  * 4 - 4/40 locking nuts
-  * 4 - 1/4" Quick Connect terminals
-  * 4 - 1/4" Nylon Spacers
-  * 18AWG - 20AWG wire 300V+
-
-
-
- 
-
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0731_1024x1024.JPG
-
-<b><font color=blue>Tip </font></b> - Click on Photos in this guide for larger versions.
-
-  * Your enclosure can be built with the AC Cord Left J1772 Right or opposite. Determine which works best for your installation and flip the mounting plate appropriately.
-
-*Example AC Cord Left - J1772 Right*
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0711_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0711_medium.JPG]
-
-*Example AC Cord Right - J1772 Left*
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0712_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0712_medium.JPG]
-
-  * Mount Relays and Fuse Block to plate with 5/16" 4-40 screws and lock nuts 
-  * Mount Ground block 
-  * Mount OpenEVSE Board elevated with 1/4" spacers, screws on top side locknuts on bottom to avoid interference with components on OpenEVSE board.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0742_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0742_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0741_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0741_medium.JPG]
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0739_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0739_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0738_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0738_medium.JPG]
-
-  * Connect Fuse block screw terminal to Relay input with 10 AWG wire for 30A Charge Station 
-  * Use quick connect terminal on the relay side only, screw terminal on fuse block
-
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0737_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0737_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0736_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0736_medium.JPG]
-
-  * Connect AC Input terminals on OpenEVSE board to the fuse block with 1/4" low current QC terminals (salmon color)
-
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0735_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0735_medium.JPG]
-
-  * Connect OpenEVSE ground (Protective Earth) to the Ground (Protective Earth) Block 
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0734_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0734_medium.JPG]
-
-  * Connect Relay coil terminals with small Quick connect terminals with wire connecting to OpenEVSE board relay output. (middle terminal is common and goes to one coil terminal on each relay)
-
-<b><font color=blue>Tip </font></b> - Click on Photos in this guide for larger versions.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0733_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0733_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0732_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0732_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0731_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0731_medium.JPG]
-
-=Preparing Button and GFCI Coil=
-
-*GFCI Coil with self test*
-
-https://lh3.googleusercontent.com/-kv-0f4LCJn4/U7TIXKjw2NI/AAAAAAAAEB4/PnFcxdquOhs/w411-h555-no/IMG_20140702_145131.jpg
-
-  * Tape wires together overlapping at least 1/2 inch. Run wires through heat shrink tubing.
-
-https://lh6.googleusercontent.com/-XrlVzak-rG4/U7TIXPwf_ZI/AAAAAAAAEB4/kLOxBhu5qIU/w751-h556-no/IMG_20140702_145438.jpg
-
-  * Wrap Orange self test wire through CT 5 times then back through heat shrink tubing. Shrink heat shrink tubing.
-
-https://lh6.googleusercontent.com/-g2C2IyPHi-s/U7TIXI2Dv_I/AAAAAAAAEB4/N8awPCLbyIA/w411-h555-no/IMG_20140702_190437.jpg
-
-  * Cut wires to length leaving 1/4" overlap to solder wires. Place heat shrink tubing on each wire.
-
-
-https://lh6.googleusercontent.com/-6TStOHDGsnc/U7TIXA-F9gI/AAAAAAAAEB4/gU_hprp5_iA/w411-h555-no/IMG_20140702_190949.jpg
-
-  * Solder White wire to one of the CT wires...Shrink tubing on white wire.
-
-https://lh3.googleusercontent.com/-BXQ0mNXity8/U7TIXFMKa2I/AAAAAAAAEB4/Q6bQ9MinaZ0/w411-h555-no/IMG_20140702_191154.jpg
-
-  * Solder other CT wire, the Orange self test wire and the black wire together. Shrink tubing.
-
-https://lh6.googleusercontent.com/-2aLIERilQ7o/U7TIXOtN0FI/AAAAAAAAEB4/Xz0EgwzQVDw/w411-h555-no/IMG_20140702_191239.jpg
-
-  * Shrink outer tubing over connection points. Connect to OpenEVSE Black wire closest to board edge.
-
-*Push Button*
-  * Place heat shrink tube over each wire 
-  * Solder the Red wire on the connector(5v DC) to the terminal lableled "+" on the pushbutton 
-
-  * Solder the black wire (GND) to the terminal labeled "-" AND the terminal labeled "C1"
-
-  * Solder the grey wire to the terminal labeled "NO1".
-  * <b><font color=red>Note </font></b>  - The Terminal labeled "NC1" is not connected and can be trimmed off if desired.
-  * Carefully shrink the wrap over each solder connection
-
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_medium.jpg]
-
-
-http://www.adafruit.com/datasheets/metal16mmbuttons.jpg
-=Cover / LCD=
-
-Next we will mount the LCD and buttonon the Front Plate.
-
-You will need:
-
-  * OpenEVSE LCD - If you have not Assembled it yet please refer to this [OpenEVSE_LCD_spec Assembly Guide]
-  * 4 - 1/4" Nylon Spacers (included in LCD kit)
-  * 4 pin connector (included in LCD kit)
-  * 4 - 5/8# 4-40 screws
-  * 16mm push button
-  * 3 pin connector
-  * Mounting plate
-
-<b><font color=red>Time Saver</font></b> - A lit push button with pre-soldered 3-pin Connector is avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store].
-
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0702_1024x1024.JPG
-
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0702_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0702_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0703_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0703_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0704_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0704_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0705_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0705_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0706_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0706_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0707_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0707_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0708_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0708_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0715_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0715_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0716_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0716_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0717_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0717_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0718_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0718_medium.JPG]
-= Enclosure Box =
-
-http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0718_1024x1024.JPG
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0718_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0718_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0719_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0719_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0720_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0720_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0721_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0721_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0722_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0722_medium.JPG]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0723_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0723_medium.JPG]
-
-
-
-
-
-=AC Wiring=
-The final step in to connect the AC wiring and the J1772 cord.
-
-<b><font color=red> Note </font></b> - For clarity the images were taken without the enclosure. This stage should be built within the enclosure.
-
-==Dual Relay 12vDC Relays SPST==
-http://open-evse.googlecode.com/files/OpenEVSE_Dual_SPST_relay.jpg
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_medium.jpg]
-
-*Note*- Crimp the wires for both AC-TEST and J1772 out into high-quality QC terminals.
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8623_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8623_medium.jpg]
-
-==Single Relay 12vDC coil DPST==
-http://open-evse.googlecode.com/files/OpenEVSE_SingleDPST_relay.jpg
-
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8362_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8362_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8363_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8363_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8364_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8364_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8365_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8365_medium.jpg]
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8366_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8366_medium.jpg]
+New Guide located at http://guides.openevse.com
