--- a/wiki/Users_Guide.wiki
+++ b/wiki/Users_Guide.wiki
@@ -111,6 +111,19 @@ The Menu options require an LCD and a button switch. The menu operates on Long p
 ===Button Menu Options===
 *Note* Menu options will not be displayed if the feature is not enabled when the firmware is compiled.
 
+  * LCD Type (Monochrome, RGB)
+    * Monochrome - Single Color LCDs
+    * RGB - Red, Green, Blue LCDs
+  * Service Level (L1, L2, Auto)
+    * L1 - Level 1 Charging Only (120v)
+    * L2 - Level 2 charging Only (200 - 240v) Recommended for International Users
+    * Auto - Auto Detect L1 or L2 
+  * Default Current (Options based on list in firmware) 
+  * Vent Required (Enabled, Disabled)
+  * Ground Check (Enabled, Disabled)
+  * Set Time (Day, Month, Year, Hour, Minute)
+  * Start Time (Hour, Minute)
+  * Stop Time (Hour, Minute)
 
 = Safety features =
 
